--- a/mympd/PKGBUILD
+++ b/mympd/PKGBUILD
@@ -1,7 +1,9 @@
 # Maintainer: K. Loz <cultofrobots [at] protonmail [dot] com>
+# Website: https://github.com/CultofRobots
 # Based on jcorporation's myMPD mkrelease.sh 
 # Website: https://github.com/jcorporation/myMPD
 # PKGBUILD Based on mympd-archphile by Mike Andonov <info [at] archphile [dot] org>
+# Website: https://archphile.org/
 
 pkgname=mympd
 _pkgname=myMPD
