--- a/ffmpeg-rpi-audio/PKGBUILD
+++ b/ffmpeg-rpi-audio/PKGBUILD
@@ -1,4 +1,5 @@
-# Maintainer: K Loz <cultofrobots [a] gmail [dot] com>
+# Maintainer: K. Loz <cultofrobots [at] protonmail [dot] com>
+# Website: https://github.com/CultofRobots
 # Based on ffmpeg-headless from AUR made by the following people
 # Contributor: Maxime Gauduin <alucryd@archlinux.org>
 # Contributor: Bartłomiej Piotrowski <bpiotrowski@archlinux.org>
