--- a/mpd-sima/PKGBUILD
+++ b/mpd-sima/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=mpd-sima
 pkgver=0.14.4
 pkgrel=1
 pkgdesc="Automagically add title to mpd playlist based on last.fm recomendations"
-arch=('any')
+arch=('x86_64' 'armv7h')
 url="http://kaliko.me/code/mpd-sima/"
 license=('GPL')
 depends=('python>=3.2' 'python-musicpd>=0.4.0' 'python-requests>=2.2.0')
