--- a/ffmpeg-rpi-audio/PKGBUILD
+++ b/ffmpeg-rpi-audio/PKGBUILD
@@ -37,26 +37,31 @@ build() {
     --disable-htmlpages \
     --disable-podpages \
     --disable-txtpages \
+    --disable-swscale \
     --disable-everything \
+    --enable-gpl \
+    --enable-nonfree \
+    --enable-shared \
     --enable-protocols \
-    --enable-decoder=aac \
-    --enable-decoder=ac3 \
-    --enable-decoder=flac \
-    --enable-decoder=mp3 \
-    --enable-demuxer=aac \
-    --enable-demuxer=ac3 \
-    --enable-demuxer=flac \
-    --enable-demuxer=mp3 \
-    --enable-demuxer=ogg \
-    --enable-demuxer=opus \
     --enable-libmp3lame \
     --enable-libopus \
     --enable-librtmp \
     --enable-libsoxr \
     --enable-libvorbis \
-    --enable-gpl \
-    --enable-nonfree \
-    --enable-shared 
+    --enable-encoder=flac \
+    --enable-decoder=aac,ac3,alac,flac,mp3,opus,vorbis \
+    --enable-decoder=dsd_lsbf,dsd_lsbf_planar,dsd_msbf,dsd_msbf_planar,dst,dts,dolby_e \
+    --enable-decoder=pcm_alaw,pcm_bluray,pcm_dvd,pcm_lxf,pcm_mulaw,pcm_zork \
+    --enable-decoder=pcm_f16le,pcm_f24le,pcm_f32be,pcm_f32le,pcm_f64be,pcm_f64le \
+    --enable-decoder=pcm_s16be,pcm_s16be_planar,pcm_s16le,pcm_s16le_planar,pcm_s24be,pcm_s24daud,pcm_s24le,pcm_s24le_planar \
+    --enable-decoder=pcm_s32be,pcm_s32le,pcm_s32le_planar,pcm_s64be,pcm_s64le \
+    --enable-decoder=pcm_u16be,pcm_u16le,pcm_u24be,pcm_u24le,pcm_u32be,pcm_u32le \
+    --enable-demuxer=aac,ac3,dts,flac,mp3 \
+    --enable-demuxer=pcm_alaw,pcm_mulaw \
+    --enable-demuxer=pcm_f32be,pcm_f32le,pcm_f64be,pcm_f64le \
+    --enable-demuxer=pcm_s16be,pcm_s16le,pcm_s24be,pcm_s24le,pcm_s32be,pcm_s32le \
+    --enable-demuxer=pcm_u16be,pcm_u16le,pcm_u24be,pcm_u24le,pcm_u32be,pcm_u32le \
+    --enable-parser=aac,ac3,flac,opus,vorbis 
   
   make
 }
