--- a/mpd-rpi/PKGBUILD
+++ b/mpd-rpi/PKGBUILD
@@ -1,4 +1,4 @@
-# Maintainer: K. Loz <cultofrobots [@] protonmail [dot] com>
+# Maintainer: robot <cultofrobots [at] protonmail [dot] com>
 # Website: https://github.com/CultofRobots/
 # Based on mpd-light from AUR made by the following people:
 # Maintainer: Alexey D. <lq07829icatm@rambler.ru>
