--- a/mympd-rpi/PKGBUILD
+++ b/mympd-rpi/PKGBUILD
@@ -1,4 +1,4 @@
-# Maintainer: K. Loz <cultofrobots [at] protonmail [dot] com>
+# Maintainer: robot <cultofrobots [at] protonmail [dot] com>
 # Website: https://github.com/CultofRobots
 # Based on jcorporation's myMPD mkrelease.sh 
 # Website: https://github.com/jcorporation/myMPD
