--- a/mpd-rpi/mpd.conf
+++ b/mpd-rpi/mpd.conf
@@ -1,65 +1,130 @@
 ###################################
-##Archphile Default Configuration##
+# Default Configuration based on 
+# configuration provided by 
+# https://archphile.org
+###################################
 
-
-follow_outside_symlinks         "yes"
-follow_inside_symlinks  "yes"
-db_file         "/var/lib/mpd/mpd.db"
-log_file        "/var/log/mpd.log"
-pid_file        "/var/run/mpd/pid"
-music_directory         "/var/lib/mpd/music"
-playlist_directory      "/var/lib/mpd/playlists"
-state_file      "/var/lib/mpd/mpdstate"
-sticker_file    "/var/lib/mpd/sticker.sql"
-user    "mpd"
-bind_to_address         "any"
-port    "6600"
+# General music daemon options #######################################
+user            "mpd"
+group           "audio"
+bind_to_address "any"
+port            "6600"
 log_level       "default"
-volume_normalization    "no"
-audio_buffer_size       "4096"
-buffer_before_play      "10%"
-filesystem_charset      "UTF-8"
-id3v1_encoding  "UTF-8"
-gapless_mp3_playback    "yes"
 auto_update     "no"
-mixer_type      "disabled"
-group   "audio"
-max_connections "20"
-restore_paused "yes"
+restore_paused  "yes"
 
+# Files and directories ##############################################
+music_directory    "/var/lib/mpd/music"
+playlist_directory "/var/lib/mpd/playlists"
+db_file            "/var/lib/mpd/mpd.db"
+log_file           "/var/log/mpd.log"
+pid_file           "/var/run/mpd/pid"
+state_file         "/var/lib/mpd/mpdstate"
+sticker_file       "/var/lib/mpd/sticker.sql"
+
+# Symbolic link behavior #############################################
+follow_inside_symlinks  "yes"
+follow_outside_symlinks "yes"
+
+# MPD Internal Buffering #############################################
+audio_buffer_size  "4096"
+buffer_before_play "10%"
+
+# Resource Limitations ###############################################
+max_connections        "20" 
+max_output_buffer_size "16384" # <size in KiB> default is 8192
+max_command_list_size  "4096" # <size in KiB> default is 2048
+
+# Character Encoding #################################################
+filesystem_charset "UTF-8"
+id3v1_encoding     "UTF-8"
+
+# Gapless mp3 playback ###############################################
+gapless_mp3_playback "yes"
+
+# Volume control mixer ###############################################
+mixer_type "disabled"
+
+# Normalization and ReplayGain settings ##############################
+replaygain           "off" # <off|album|track|auto>
+replaygain_preamp    "0" # <-15 to 15> gain in dB
+volume_normalization "no"
+
+# Zeroconf / Avahi Service Discovery #################################
+zeroconf_enabled "yes"
+zeroconf_name    "mpd-rpi"
+
+# Decoder ############################################################
 decoder {
-plugin          "ffmpeg"
-enabled         "no"
+  plugin  "ffmpeg"
+  enabled "no"
 }
 
+# Input ##############################################################
 input {
-plugin          "curl"
+  plugin "curl"
 }
 
+# Resampler ##########################################################
 #resampler {
-#  plugin "soxr"
+#  plugin  "soxr"
 #  quality "very high"
 #}
 
+# Audio Outputs ######################################################
+### direct DAC output
 audio_output {
-enabled         "yes"
-type            "alsa"
-name            "MY DAC"
-device          "hw:0,0"
-# use the line below when enabling sox resampler
-# the lines below are just some examples
-#format "192000:24:2"
-#format "*:24:*"
-auto_resample   "no"
-auto_channels   "no"
-auto_format     "no"
-#dop             "yes"
+  enabled       "yes"
+  type          "alsa"
+  name          "DAC"
+  device        "hw:0,0"
+  # use the line below when enabling sox resampler
+  # the lines below are just some examples
+  #format       "192000:24:2"
+  #format       "*:24:*"
+  auto_resample "no"
+  auto_channels "no"
+  auto_format   "no"
+  dop           "yes"
 }
 
+### alsa elqualizer output
 #audio_output {
-#type           "pipe"
-#name           "brutefir pipe"
-#command        "aplay -f cd 2>/dev/null"
-#command        "/usr/bin/brutefir -nodefault /opt/brutefir/brutefir_config 2>/dev/null"
-#format         "44100:32:2"
+#  type          "alsa"
+#  name          "alsaeq"
+#  device        "plug:plugequal"
+#  use_mmap      "yes"
+#  mixer_control "digital"
 #}
+
+### visualization output
+#audio_output {
+#  type   "fifo"
+#  name   "FIFO (for visualizer)"
+#  path   "/tmp/mpd.fifo"
+#  format "44100:16:2"
+#}
+
+### http Lossless stream
+#audio_output {
+#  type    "httpd"
+#  name    "Lossless Stream"
+#  #choose flac OR wave
+#  encoder "flac"
+#  encoder "wave"
+#  port    "8000"
+#  format  "44100:16:2"
+#}
+
+### brutefir pipe
+#audio_output {
+#  type    "pipe"
+#  name    "brutefir pipe"
+#  command "aplay -f cd 2>/dev/null"
+#  command "/usr/bin/brutefir -nodefault /opt/brutefir/brutefir_config 2>/dev/null"
+#  format  "44100:32:2"
+#}
+
+#######################################################################
+# EOF
+#######################################################################
