additions to mpd.conf

--- a/mpd-rpi/mpd.conf
+++ b/mpd-rpi/mpd.conf
@@ -2,16 +2,22 @@
 # Default Configuration based on 
 # configuration provided by 
 # https://archphile.org
+# see `man mpd.conf` for full 
+# list of configuration options
 ###################################
 
 # General music daemon options #######################################
-user            "mpd"
-group           "audio"
-bind_to_address "any"
-port            "6600"
-log_level       "default"
-auto_update     "no"
-restore_paused  "yes"
+user                             "mpd"
+group                            "audio"
+bind_to_address                  "any"
+port                             "6600"
+log_level                        "default"
+auto_update                      "no"
+restore_paused                   "yes"
+# SEE https://www.musicpd.org/doc/html/user.html#tags
+# for the full list of supported tags.
+metadata_to_use                  "+comment" 
+save_absolute_paths_in_playlists "yes" # default is no
 
 # Files and directories ##############################################
 music_directory    "/var/lib/mpd/music"
