additions to mpd.conf

--- a/mpd-rpi/mpd.conf
+++ b/mpd-rpi/mpd.conf
@@ -16,7 +16,7 @@ auto_update                      "no"
 restore_paused                   "yes"
 # SEE https://www.musicpd.org/doc/html/user.html#tags
 # for the full list of supported tags.
-metadata_to_use                  "+comment" 
+#metadata_to_use                  "" 
 save_absolute_paths_in_playlists "yes" # default is no
 
 # Files and directories ##############################################
