remove unnecessary dependencies

--- a/mympd-rpi/PKGBUILD
+++ b/mympd-rpi/PKGBUILD
@@ -14,7 +14,7 @@ arch=('armv7h' 'aarch64')
 url="http://github.org/jcorporation/myMPD"
 license=('GPL')
 depends=('libmpdclient' 'openssl')
-makedepends=('cmake' 'git')
+makedepends=('cmake')
 optdepends=()
 provides=()
 conflicts=(mympd)
