--- a/mpd-rpi-minimal/mpd.conf
+++ b/mpd-rpi-minimal/mpd.conf
@@ -92,6 +92,7 @@ input {
 #}
 
 # Audio Outputs ######################################################
+### default alsa output
 audio_output {
   type   "alsa"
   name   "alsa"
