--- a/mpd-rpi/mpd.conf
+++ b/mpd-rpi/mpd.conf
@@ -61,6 +61,19 @@ zeroconf_enabled "yes"
 zeroconf_name    "mpd-rpi"
 
 # Decoder ############################################################
+# To configure a decoder add a block below as follows:
+#decoder {
+#  plugin "<decoder>"
+#  config_file "<path_to_config> # if needed
+#}
+
+# To disable a decoder add a block below as follows:
+#decoder {
+#  plugin  "<plugin>"
+#  enabled "no"
+#}
+
+# disable ffmpeg in lieu of other built in decoders
 decoder {
   plugin  "ffmpeg"
   enabled "no"
@@ -78,21 +91,29 @@ input {
 #}
 
 # Audio Outputs ######################################################
-### direct DAC output
+### default alsa output
 audio_output {
-  enabled       "yes"
-  type          "alsa"
-  name          "DAC"
-  device        "hw:0,0"
-  # use the line below when enabling sox resampler
-  # the lines below are just some examples
-  #format       "192000:24:2"
-  #format       "*:24:*"
-  auto_resample "no"
-  auto_channels "no"
-  auto_format   "no"
-  dop           "yes"
+  type   "alsa"
+  name   "alsa"
+  device "hw:0,0"
+  dop    "no"
 }
+
+### direct DAC output
+#audio_output {
+#  enabled       "yes"
+#  type          "alsa"
+#  name          "DAC"
+#  device        "hw:0,0"
+#  # use the line below when enabling sox resampler
+#  # the lines below are just some examples
+#  #format       "192000:24:2"
+#  #format       "*:24:*"
+#  auto_resample "no"
+#  auto_channels "no"
+#  auto_format   "no"
+#  dop           "yes"
+#}
 
 ### alsa elqualizer output
 #audio_output {
