--- a/cli-visualizer-rpi/PKGBUILD
+++ b/cli-visualizer-rpi/PKGBUILD
@@ -11,7 +11,7 @@ url="https://github.com/dpayne/cli-visualizer/"
 license=('MIT')
 depends=('ncurses' 'fftw')
 makedepends=('git' 'fftw' 'cmake')
-conflicts=('vis')
+conflicts=('vis' 'cli-visualizer')
 install=${pkgname}.install
 source=('https://github.com/dpayne/cli-visualizer/archive/v1.8.tar.gz')
 sha256sums=('927e4c18403c7a40397e8698ffefd1b37250be20fa0ec55fda9a82cf9cc8ba51')
