--- a/mympd/PKGBUILD
+++ b/mympd/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=mympd
 _pkgname=myMPD
-pkgver=4.3.0
+pkgver=4.3.1
 pkgrel=1
-pkgdesc="A standalone MPD Web GUI based on YMPD - Default port set to 80"
+pkgdesc="myMPD is a standalone and mobile friendly web mpdclient."
 arch=('x86_64' 'armv7h' 'aarch64')
 url="http://github.org/jcorporation/myMPD"
 license=('GPL')
@@ -20,8 +20,8 @@ replaces=()
 install=mympd.install
 source=("https://github.com/jcorporation/${_pkgname}/archive/v${pkgver}.tar.gz"
         'mympd.install')
-sha256sums=('fc099068df1b40abea25cc12234ae7fc369f08088645d2d576988139f4970aec'
-            'f38ac09ab6acfbf3e5c53c67195d735e5cba568edb88263dba07b22edc3e1005')
+sha256sums=('6e84ad7e55b346fea00dbf449039131ac7841cfe7417be3349489cb9a6c74842'
+            'da5f50ce94e7c478a596d5e01d6616f513ab7fac7cf9438c3d27f3661d3f45ff')
 
 build() {
   cd "${srcdir}/${_pkgname}-${pkgver}"
