--- a/mpd-rpi/mpd.conf
+++ b/mpd-rpi/mpd.conf
@@ -1,10 +1,9 @@
-###################################
-# Default Configuration based on 
-# configuration provided by 
+######################################################################
+# Default Configuration based on configuration provided by 
 # https://archphile.org
-# see `man mpd.conf` for full 
-# list of configuration options
-###################################
+# See: /usr/share/doc/mpd/mpdconf.example
+# and `man mpd.conf` for full list of configuration options
+######################################################################
 
 # General music daemon options #######################################
 user                             "mpd"
