--- a/mpd-rpi/PKGBUILD
+++ b/mpd-rpi/PKGBUILD
@@ -9,102 +9,100 @@
 
 pkgname=mpd-rpi
 _pkgname=mpd
-pkgver=0.20.23
+pkgver=0.21
 pkgrel=1
 pkgdesc='Flexible, powerful, server-side application for playing music. Light version optimized for raspberry pi ARM7+ distribution.'
 url='http://www.musicpd.org/'
 license=('GPL')
 arch=('armv7h' 'aarch64')
-depends=('audiofile' 'avahi' 'curl' 'faad2' 'ffmpeg' 'flac' 'icu' 'libid3tag' 'libmad' 'libmpdclient' 'libsoxr' 'opus' 'sqlite')
-makedepends=('boost' 'doxygen')
+depends=('audiofile' 'avahi' 'curl' 'faad2' 'ffmpeg' 'icu' 'libid3tag' 'libmad' 'libmpdclient' 
+         'libsamplerate' 'libsoxr' 'libsystemd' 'libupnp' 'opus' 'sqlite' 'wavpack' 'yajl' 'zlib')
+makedepends=('boost' 'meson' 'python-sphinx')
 provides=("mpd=$pkgver")
 conflicts=('mpd')
 replaces=('mpd')
-source=("https://www.musicpd.org/download/${_pkgname}/${pkgver%.*}/${_pkgname}-${pkgver}.tar.xz"
+source=("https://www.musicpd.org/download/${_pkgname}/${pkgver}/${_pkgname}-${pkgver}.tar.xz"
         'tmpfiles.d'
         'sysusers.d'
         'mpd.conf')
-sha256sums=('503e5f9f237290f568ff7956ab2f9aed563594bf749f19b8fe994fb21434afea'
+sha256sums=('8b0ee75fb62ba69a4a127d51fb7011c60067de3f92d050184c52420d70b1528c'
             '4e20576ea53141fc398f8e586f30bdf06a404ca099db037724ef80f15c7f2ea3'
             '0b74c6e5db08daab3091dc15a6b0c75210ba2f9e98fa074f6cfd605a461056b6'
-            '350fb467d8fa56d9fcd09fe47a67a5a7fc9c9bde950ba725218f99b841107e57')
+            '47414fbb1416b127590b27d8a68d14f99d1e5cccfd7228b9485adb2bc5a8aa53')
 backup=('etc/mpd.conf')
 
+prepare() {
+	cd "${srcdir}/${_pkgname}-${pkgver}"
+	rm -fr build
+	install -d build
+}
 
 build() {
-  cd "${srcdir}/${_pkgname}-${pkgver}"
-
-  ./configure \
-    --prefix=/usr \
-    --sysconfdir=/etc \
-    --enable-alsa \
-    --enable-ffmpeg \
-    --enable-soxr \
-    --enable-httpd-output \
-    --enable-pipe-output \
-    --enable-aac \
-    --enable-audiofile \
-    --enable-dsd \
-    --enable-lame-encoder \
-    --enable-mad \
-    --enable-opus \
-    --enable-soundcloud \
-    --enable-wave-encoder \
-    --enable-wavpack \
-    --disable-nfs \
-    --disable-smbclient \
-    --disable-webdav \
-    --disable-adplug \
-    --disable-ao \
-    --disable-bzip2 \
-    --disable-cdio-paranoia \
-    --disable-fluidsynth \
-    --disable-gme \
-    --disable-haiku \
-    --disable-ipv6 \
-    --disable-iso9660 \
-    --disable-jack \
-    --disable-lsr \
-    --disable-libwrap \
-    --disable-mms \
-    --disable-modplug \
-    --disable-mpc \
-    --disable-mpg123 \
-    --disable-openal \
-    --disable-oss \
-    --disable-pulse \
-    --disable-roar \
-    --disable-shout \
-    --disable-sidplay \
-    --disable-shine-encoder \
-    --disable-sndio \
-    --disable-sndfile \
-    --disable-twolame-encoder \
-    --disable-vorbis \
-    --disable-vorbis-encoder \
-    --disable-wildmidi \
-    --disable-zlib \
-    --enable-icu \
-    --enable-id3 \
-    --enable-libmpdclient \
-    --enable-systemd-daemon \
-    --with-zeroconf=avahi \
-    --with-systemduserunitdir=/usr/lib/systemd/user \
-    --with-systemdsystemunitdir=/usr/lib/systemd/system
-
-  make
+  cd "${srcdir}/${_pkgname}-${pkgver}/build"
+  _opts=('-Ddocumentation=true'
+    # Disabled from official Arch Linux PKGBUILD
+		'-Dchromaprint=disabled' # appears not to be used for anything
+		'-Dsidplay=disabled' # unclear why but disabled in the past
+		'-Dlibwrap=disabled' # twentieth century's over
+		'-Dadplug=disabled' # not in an official repo
+		'-Dsndio=disabled' # interferes with detection of alsa devices
+		'-Dshine=disabled' # not in an official repo
+    # Disabled Network support
+		'-Dipv6=disabled'
+    # Disabled Storage plugins
+		'-Dwebdav=disabled'
+    # Disabled Input plugins
+		'-Dcdio_paranoia=disabled'
+		'-Dmms=disabled'
+		'-Dnfs=disabled'
+		'-Dsmbclient=disabled'
+    # Disabled Commercial services
+		'-Dqobuz=disabled'
+		'-Dtidal=disabled'
+    # Disabled Archive plugins
+		'-Dbzip2=disabled'
+		'-Diso9660=disabled'
+		'-Dzzip=disabled'
+    # Disabled Decoder plugins
+		'-Dfluidsynth=disabled'
+		'-Dgme=disabled'
+		'-Dmikmod=disabled'
+		'-Dmodplug=disabled'
+		'-Dmpcdec=disabled'
+		'-Dmpg123=disabled'
+		'-Dsidplay=disabled'
+		'-Dsndfile=disabled'
+		'-Dvorbis=disabled' # let opus decode it
+		'-Dwildmidi=disabled'
+    # Disabled Encoder plugins
+		'-Dvorbisenc=disabled' # use opus
+		'-Dtwolame=disabled'
+    # Disabled Output plugins
+		'-Dao=disabled'
+		'-Djack=disabled'
+		'-Dopenal=disabled'
+		'-Doss=disabled'
+		'-Dpulse=disabled'
+		'-Dshout=disabled' # will probably be enabled again in the near future
+  )
+  arch-meson .. ${_opts[@]}
+  ninja
 }
 
 package() {
-  cd "${srcdir}/${_pkgname}-${pkgver}"
-  
-  make DESTDIR="${pkgdir}" install
-  install -Dm644 ../mpd.conf "${pkgdir}"/etc/mpd.conf
-  install -Dm644 ../tmpfiles.d "${pkgdir}"/usr/lib/tmpfiles.d/mpd.conf
-  install -Dm644 ../sysusers.d "${pkgdir}"/usr/lib/sysusers.d/mpd.conf
+  cd "${srcdir}/${_pkgname}-${pkgver}/build"
+  DESTDIR="${pkgdir}" ninja install
+  install -Dm644 ../doc/mpdconf.example "${pkgdir}"/usr/share/doc/mpd/mpdconf.example
+	install -Dm644 ../doc/mpd.conf.5 "${pkgdir}"/usr/share/man/man5/mpd.conf.5
+	install -Dm644 ../doc/mpd.1 "${pkgdir}"/usr/share/man/man1/mpd.1
 
-  install -Dm644 "${pkgdir}"/usr/lib/systemd/{system,user}/mpd.service
-  sed '/WantedBy=/c WantedBy=default.target' -i "${pkgdir}"/usr/lib/systemd/{system,user}/mpd.service
-  sed '/ExecStart=/c ExecStart=/usr/bin/nice -n -16 /usr/bin/mpd --no-daemon' -i "${pkgdir}"/usr/lib/systemd/{system,user}/mpd.service
+	install -Dm644 ../../tmpfiles.d "${pkgdir}"/usr/lib/tmpfiles.d/mpd.conf
+	install -Dm644 ../../sysusers.d "${pkgdir}"/usr/lib/sysusers.d/mpd.conf
+  install -Dm644 ../../mpd.conf "${pkgdir}"/etc/mpd.conf
 
+	sed \
+		-e '/\[Service\]/a User=mpd' \
+		-e '/WantedBy=/c WantedBy=default.target' \
+		-i "${pkgdir}"/usr/lib/systemd/system/mpd.service
 }
+
