mpd-0.21: removed deprecated values from mpd.conf

--- a/mpd-rpi/mpd.conf
+++ b/mpd-rpi/mpd.conf
@@ -7,7 +7,7 @@
 
 # General music daemon options #######################################
 user                             "mpd"
-group                            "audio"
+group                            "mpd"
 bind_to_address                  "any"
 port                             "6600"
 log_level                        "default"
@@ -33,7 +33,7 @@ follow_outside_symlinks "yes"
 
 # MPD Internal Buffering #############################################
 audio_buffer_size  "4096"
-buffer_before_play "10%"
+#buffer_time <time in microseconds> #The default is 500000 microseconds (0.5 seconds).
 
 # Resource Limitations ###############################################
 max_connections        "20" 
@@ -42,10 +42,6 @@ max_command_list_size  "4096" # <size in KiB> default is 2048
 
 # Character Encoding #################################################
 filesystem_charset "UTF-8"
-id3v1_encoding     "UTF-8"
-
-# Gapless mp3 playback ###############################################
-gapless_mp3_playback "yes"
 
 # Volume control mixer ###############################################
 mixer_type "disabled"
