mpd-0.21: bind_to_address now uses socket

--- a/mpd-rpi/mpd.conf
+++ b/mpd-rpi/mpd.conf
@@ -7,7 +7,7 @@
 
 # General music daemon options #######################################
 user                             "mpd"
-bind_to_address                  "any"
+bind_to_address                  "/var/run/mpd/socket"
 port                             "6600"
 log_level                        "default"
 auto_update                      "no"
