--- a/mpd-rpi/mpd.conf
+++ b/mpd-rpi/mpd.conf
@@ -32,7 +32,6 @@ follow_outside_symlinks "yes"
 
 # MPD Internal Buffering #############################################
 audio_buffer_size  "4096"
-#buffer_time <time in microseconds> #The default is 500000 microseconds (0.5 seconds).
 
 # Resource Limitations ###############################################
 max_connections        "20" 
@@ -91,6 +90,8 @@ audio_output {
   name   "alsa"
   device "hw:0,0"
   dop    "no"
+  #buffer_time <time in microseconds> #The default is 500000 microseconds (0.5 seconds).
+  #period_time <time in microseconds> # The default is 256000000 / sample_rate(kHz), or 5804 microseconds for CD-quality audio.
 }
 
 ### direct DAC output
@@ -107,6 +108,8 @@ audio_output {
 #  auto_channels "no"
 #  auto_format   "no"
 #  dop           "yes"
+#  #buffer_time <time in microseconds>
+#  #period_time <time in microseconds>
 #}
 
 ### alsa elqualizer output
