mpd-0.21: conf update w/ satellite setup example

--- a/mpd-rpi/mpd.conf
+++ b/mpd-rpi/mpd.conf
@@ -26,6 +26,16 @@ pid_file           "/var/run/mpd/pid"
 state_file         "/var/lib/mpd/mpdstate"
 sticker_file       "/var/lib/mpd/sticker.sql"
 
+# Remote database ####################################################
+# SEE mpd manual for information pertaining to satellite setup:
+# https://www.musicpd.org/doc/html/user.html#satellite
+
+#music_directory "nfs://<nfs-server.domain/path/to/music/files>"
+#database {
+#    plugin "proxy"
+#    host "<nfs-server.domain>"
+#}
+
 # Symbolic link behavior #############################################
 follow_inside_symlinks  "yes"
 follow_outside_symlinks "yes"
