--- a/mympd/PKGBUILD
+++ b/mympd/PKGBUILD
@@ -12,7 +12,7 @@ arch=('x86_64' 'armv7h' 'aarch64')
 url="http://github.org/jcorporation/myMPD"
 license=('GPL')
 depends=('libmpdclient' 'openssl')
-makedepends=('cmake')
+makedepends=('cmake' 'cppcheck')
 optdepends=()
 provides=()
 conflicts=()
@@ -20,7 +20,7 @@ replaces=()
 install=mympd.install
 source=("https://github.com/jcorporation/${_pkgname}/archive/v${pkgver}.tar.gz"
         'mympd.install')
-sha256sums=('2b9b449274c74bef3c5c95dc1bf95f8b06e32396ac820ea87558e015ae07034e'
+sha256sums=('b22556e3503c532c9ab5fdcdd24bb91a6c6025207567b723bf73ee6f4e7ddd19'
             '207282117f2b37723d06c54f0d7a288a7b0aaa9dbc84543ba970323f7a081d6e')
 
 build() {
