--- a/mympd/PKGBUILD
+++ b/mympd/PKGBUILD
@@ -12,7 +12,7 @@ arch=('x86_64' 'armv7h' 'aarch64')
 url="http://github.org/jcorporation/myMPD"
 license=('GPL')
 depends=('libmpdclient' 'openssl')
-makedepends=('cmake' 'cppcheck')
+makedepends=('cmake')
 optdepends=()
 provides=()
 conflicts=()
